# Daily-Inspiration-Bot

./: CMakeLists.txt  CMakeLists.txt.bak  Daily-Inspiration-Bot.spec  daily-inspiration.spec  subscribed_channels.txt
src/: main.cpp
